# uno-game-cpp

./: .gitignore  CMakeLists.txt  PROJECT_INTRO.html  README.md  UNO_GAME_DOCS.md  console_ui.cpp  deck_b64.txt  uno-game-standalone.html  uno-game.html  控制台版技术文档.docx
.workbuddy/memory/: 2026-06-23.md
include/: ai_player.h  card.h  deck.h  game.h  player.h
src/: ai_player.cpp  card.cpp  deck.cpp  game.cpp  main.cpp  player.cpp
src/core/: CMakeLists.txt  ai_player.cpp  ai_player.h  card.cpp  card.h  dealer.cpp  dealer.h  game.cpp  game.h  human_player.cpp  human_player.h  judger.cpp  judger.h  player.cpp  player.h  round.cpp  round.h
src/core/test/: CMakeLists.txt  test_game.cpp
src/ui/: card_widget.cpp  card_widget.h  game_scene.cpp  game_scene.h  hand_widget.cpp  hand_widget.h  main_window.cpp  main_window.h  player_info_widget.cpp  player_info_widget.h
